# ornstein.ai

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
docs/plans/: 2026-03-20-expressive-desktop-pet-design.md  2026-03-20-expressive-desktop-pet.md  2026-03-20-llama-cpp-integration-design.md  2026-03-20-ui-improvements-design.md  2026-03-20-ui-improvements.md
include/: platform.h
lib/glad/include/glad/: gl.h
src/: ambient.c  ambient.h  chat.c  chat.h  face.c  face.h  gl_util.c  gl_util.h  llm.c  llm.h  main.c  mood.c  mood.h  mood_colors.h  platform_macos.m  sentiment.c  sentiment.h  stats.c  stats.h  text.c  text.h  util.h
tests/: test_main.c
